--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "angular": "^1.6.5",
+    "angular-chart.js": "^1.1.1",
     "angular-resource": "^1.6.5",
     "angular-route": "^1.6.5",
     "angular-ui-bootstrap": "^2.5.0",
+    "chart.js": "^2.6.0",
     "eslint-loader": "^1.9.0",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.4",
